--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ a:hover{
 
 img{
   image-rendering: pixelated;
-  width: 100%;
-  height: fit-content;
+  max-width: 100%;
   margin: auto;
   border-radius: 0.5em;
 }
